@@ -1,4 +1,9 @@
 <html><body>You can press <b>C+t <i>X</i></b> to save the current
 position to a marker with shortcut <i>X</i>, and <b>C+y <i>X</i></b> to return
 to the marker with shortcut <i>X</i>, where <i>X</i> is any key on your
-keyboard.</body></html>
+keyboard.<p>
+
+Marker positions are saved to <tt>.<i>file
+name</i>.marks</tt>. If you don't these files to be created,
+disable marker persistence in the <b>General</b> pane of
+the <b>Utilities</b>&gt;<b>Global Options</b> dialog box.</body></html>
