@@ -1,4 +1,3 @@
-<html><body>The locations of markers are saved to <tt>.<i>file
-name</i>.marks</tt>. If you would prefer not to have these files created,
-you can disable marker persistence in the <b>Loading and Saving</b> pane of
-the <b>Utilities</b>&gt;<b>Global Options</b> dialog box.</body></html>
+<html><body>You can toggle the search bar's <b>Ignore Case</b> check
+box by pressing <b>C+e C+i</b>, and the
+<b>Regular Expressions</b> check box by pressing <b>C+e C+x</b>.</body></html>
