@@ -1,7 +1,7 @@
 <html><body>
-To open a new, floating, instance of a docked window, right-click on the strip
-of buttons in the docking area, and select the dockable from the
-<b>New Floating Instance</b> menu in the popup that appears.<p>
+To open a new, floating, instance of a docked window, right-click on the dockable's button and select <b>New Floating Instance</b> from the resulting menu.<p>
+
+To open a new, floating, instance of a floating window, click the menu button in the top left corner of the window and select <b>New Floating Instance</b> from the resulting menu.<p>
 
 You can use this to open multiple file system browsers at once, for example.
 </body></html>
