@@ -1,6 +1,5 @@
-<html><body>If you use jEdit to edit files stored in the CVS version
-control system, you should install the
-<b>Gruntspud</b> plugin. If you use Microsoft Visual SourceSafe,
-install <b>VSSPlugin</b>. Plugins can
+<html><body>If you use a version control system, try the
+<b>Gruntspud</b> plugin (CVS), <b>SourceControl</b> (Perforce, Visual SourceSafe) or <b>ClearCase</b>.
+Plugins can
 be downloaded and installed from within jEdit using the plugin manager
 (<b>Plugins</b>&gt;<b>Plugin Manager</b>).</body></html>
