@@ -1,7 +1,7 @@
 <html><body>
 
 In jEdit 4.1, the "indent on enter" and "indent on tab"
-settings have been removed. Now, the behavior of the <b>ENTER</b> and <b>TAB</b> keys
+settings were removed. Now, the behavior of the <b>ENTER</b> and <b>TAB</b> keys
 can be configured in the <b>Shortcuts</b> pane of the <b>Global Options</b> dialog
 box, just as with any other key. The <b>ENTER</b> key can be bound to one of
 the following commands, for example:
