@@ -1,5 +1,5 @@
 <html><body>You can view multiple buffers at a time, in one single view.
 <b>C+2</b> splits the view horizontally. <b>C+3</b> splits
 the view vertically. <b>C+1</b> removes all splits from the
-view. <b>C+0</b> removes the currently focused split from the view.
+view. <b>C+0</b> removes the currently focused split from the view. jEdit remembers if the view was split between editing sessions.
 </body></html>
