@@ -43,8 +43,6 @@ public class ActionBar extends JPanel
 	{
 		setLayout(new BoxLayout(this,BoxLayout.X_AXIS));
 
-		actions = jEdit.getActionNames();
-		Arrays.sort(actions,new MiscUtilities.StringICaseCompare());
 		this.view = view;
 		this.temp = temp;
 
@@ -88,6 +86,17 @@ public class ActionBar extends JPanel
 		action.grabFocus();
 	} //}}}
 
+	//{{{ actionListChanged()
+	/**
+	 * Called when plugins are added or removed to notify the action bar
+	 * that the action list has changed.
+	 * @since jEdit 4.2pre2
+	 */
+	public void actionListChanged()
+	{
+		actions = null;
+	} //}}}
+
 	//{{{ Private members
 
 	private static NameSpace namespace = new NameSpace(
@@ -102,6 +111,16 @@ public class ActionBar extends JPanel
 	private RolloverButton close;
 	private String[] actions;
 	//}}}
+
+	//{{{ initActions() method
+	private void initActions()
+	{
+		if(actions != null)
+			return;
+
+		actions = jEdit.getActionNames();
+		Arrays.sort(actions,new MiscUtilities.StringICaseCompare());
+	} //}}}
 
 	//{{{ invoke() method
 	private void invoke()
@@ -219,6 +238,8 @@ public class ActionBar extends JPanel
 	//{{{ getCompletions() method
 	private String[] getCompletions(String str)
 	{
+		initActions();
+
 		str = str.toLowerCase();
 		ArrayList returnValue = new ArrayList(actions.length);
 		for(int i = 0; i < actions.length; i++)
